@@ -53,7 +53,6 @@ function update_forum_classes(int $value, string $direction)
             ->set(['min_delete_view_class' => new Envms\FluentPDO\Literal('min_delete_view_class + 1')])
             ->where('min_delete_view_class >= ?', $value)
             ->execute();
-
     } else {
         $fluent->update('forums')
             ->set(['min_class_read' => new Envms\FluentPDO\Literal('min_class_read - 1')])
@@ -78,7 +77,6 @@ function update_forum_classes(int $value, string $direction)
             ->where('min_delete_view_class >= ?', $value)
             ->where('min_delete_view_class > 0')
             ->execute();
-
     }
 
     $cache->delete('staff_forums_');
